# cubeworld

./: .gitignore  CMakeLists.txt  README.md
CubeWorld/shaders/: shader.frag
scripts/: build.sh  deploy.sh  run.sh
shaders/: ortho.vert  shader.frag  shader.vert  skybox.vert
src/: BlockVertices.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Image.cpp  Image.h  Main.cpp  Mesh.cpp  Mesh.h  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureAtlas.h  Transformable.h  Window.cpp  Window.h
src/2D/: Sprite.cpp  Sprite.h  Transformable.h
src/2D/text/: Font.cpp  Font.h  Text.cpp  Text.h
src/player/: Camera.cpp  Camera.h  MousePicker.cpp  MousePicker.h  Player.cpp  Player.h
src/render/: ChunkRenderer.cpp  ChunkRenderer.h  MasterRenderer.cpp  MasterRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
src/resource/: ResourceHolder.h  ResourceManager.cpp  ResourceManager.h
src/shader/: Shader.cpp  Shader.h
src/state/: InGameState.cpp  InGameState.h  State.h
src/texture/: Glyph.cpp  Glyph.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureAtlas.h
src/util/: Color.cpp  Color.h  Timer.h  Vector2.h  Vector3.h
src/util/math/: Math.h  Ray.cpp  Ray.h  Rect.h  Vector2.h  Vector3.h
src/world/: Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
src/world/block/: Block.cpp  Block.h  BlockManager.h  BlockType.h  BlockVertices.h
src/world/chunk/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h
src/world/terrain/: TerrainGenerator.cpp  TerrainGenerator.h
